--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,8 @@ import MagneticButton from '../components/animations/MagneticButton.astro';
 import SplitText from '../components/animations/SplitText.astro';
 import TextScramble from '../components/animations/TextScramble.astro';
 import WordReveal from '../components/animations/WordReveal.astro';
+import FloatingOrbs from '../components/animations/FloatingOrbs.astro';
+import TimelineDrawLine from '../components/animations/TimelineDrawLine.astro';
 
 interface Props {
   title: string;
@@ -86,6 +88,8 @@ const {
     <SplitText />
     <TextScramble />
     <WordReveal />
+    <FloatingOrbs />
+    <TimelineDrawLine />
 
     <!-- Animation lifecycle: GSAP ScrollTrigger + Lenis smooth scroll -->
     <script>
