added more projects

--- a/src/components/PersonJsonLd.astro
+++ b/src/components/PersonJsonLd.astro
@@ -25,7 +25,9 @@ const schema = {
     "TypeScript",
     "Java",
     "Penetration Testing",
-    "Network Security"
+    "Network Security",
+    "Slack Bot Development",
+    "DevSpace"
   ],
   "sameAs": [
     "https://github.com/PatrykQuantumNomad",
@@ -36,7 +38,9 @@ const schema = {
     "https://mykubert.com/blog/",
     "https://networking-tools.patrykgolabek.dev/",
     "https://jobflow.patrykgolabek.dev/",
-    "https://financial-data-extractor.patrykgolabek.dev/"
+    "https://financial-data-extractor.patrykgolabek.dev/",
+    "https://kubert-assistant-lite.patrykgolabek.dev/",
+    "https://webinar-slack-bot.patrykgolabek.dev/"
   ],
   "jobTitle": "Cloud-Native Software Architect (Open to Work)",
   "address": {
